--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -2,7 +2,14 @@ body {
     width: 100%;
     height: 100vh;
     display: flex;
-    overflow: hidden;
+    /* overflow: hidden; */
+
+    vertical-holder {
+        position: relative;
+        margin: auto;
+        width: 1280px;
+        height: 1440px;
+    }
 
     canvas {
         position: relative;
