--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -2,7 +2,7 @@ body {
     width: 100%;
     height: 100vh;
     display: flex;
-    /* overflow: hidden; */
+    overflow: hidden;
 
     vertical-holder {
         position: relative;
@@ -13,10 +13,9 @@ body {
 
     canvas {
         position: relative;
-        margin: auto;
         border: 1px solid black;
         width: 1280px;
         height: 720px;
-        image-rendering: pixelated;         /* Pixel-Perfect Upscaling */
+        image-rendering: pixelated;         /* Upscaling */
     }
 }
